--- a/configuration.cfg
+++ b/configuration.cfg
@@ -15,7 +15,7 @@ NORMAL="\e[0m"
 dnsDictionary=YOUR_DNS_DICTIONARY
 aquatoneTimeout=50000
 dictionary=YOUR DICTIONARY
-github_token=YOUR_GITHUB_TOKEN
+github_token=YOUR_GITHUB_TOKEN// left empty if not secure
 massiveTime=3600
 excludeStatus=404,403,401,503
 burpCollaborator=YOUR_BURP_COLLABORATOR
